create endpoint to start consumer in background
